[gd_scene load_steps=11 format=3 uid="uid://4fuh8a3kgm74"]

[ext_resource type="Script" path="res://ui/startMenu/start_menu.gd" id="1_n2na3"]
[ext_resource type="Texture2D" uid="uid://bkv4q8tujtwje" path="res://Art/png/layer_1.png" id="2_inrw5"]
[ext_resource type="FontFile" uid="uid://d1h8kbaa6huqg" path="res://Art/assets/fonts/upheavtt.ttf" id="3_c7pdp"]
[ext_resource type="PackedScene" uid="uid://e7f4lwi5yqfj" path="res://ui/startMenu/optionsMenu/options_menu.tscn" id="4_crsa3"]
[ext_resource type="AudioStream" uid="uid://cxq11nsi1omqs" path="res://music/dark-magic-music-143995.mp3" id="5_xpwa8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fl4x4"]
texture = ExtResource("2_inrw5")
modulate_color = Color(0.834614, 0.834614, 0.834614, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u6xi7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1x6a"]
bg_color = Color(0.556953, 0.556953, 0.556953, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ix7de"]
bg_color = Color(0.427493, 0.427493, 0.427493, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2lacb"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n2na3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fl4x4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.5
offset_top = -121.0
offset_right = 202.5
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Start_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_c7pdp")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_u6xi7")
theme_override_styles/hover = SubResource("StyleBoxFlat_h1x6a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ix7de")
theme_override_styles/normal = SubResource("StyleBoxFlat_2lacb")
text = "Start Game"

[node name="Load_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_c7pdp")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_u6xi7")
theme_override_styles/hover = SubResource("StyleBoxFlat_h1x6a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ix7de")
theme_override_styles/normal = SubResource("StyleBoxFlat_2lacb")
text = "Load Game"

[node name="Options_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_c7pdp")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_u6xi7")
theme_override_styles/hover = SubResource("StyleBoxFlat_h1x6a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ix7de")
theme_override_styles/normal = SubResource("StyleBoxFlat_2lacb")
text = "Options"

[node name="Exit_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_c7pdp")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_u6xi7")
theme_override_styles/hover = SubResource("StyleBoxFlat_h1x6a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ix7de")
theme_override_styles/normal = SubResource("StyleBoxFlat_2lacb")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -299.0
offset_right = 185.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("3_c7pdp")
theme_override_font_sizes/font_size = 100
text = "ARPG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options_Menu" parent="." instance=ExtResource("4_crsa3")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xpwa8")
volume_db = -22.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start_Button" to="." method="_on_startbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/Load_Button" to="." method="_on_loadbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/Options_Button" to="." method="_on_optionsbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit_Button" to="." method="_on_exitbutton_pressed"]
